--- a/config.env
+++ b/config.env
@@ -5,7 +5,7 @@ PUBLIC_MODE='yes'
 
 #═══════[ OWNER DETAILS ]═══════✧#
 OWNER_NAME="᚛Ibrahim adams᚜"
-OWNER_NUMBER=""
+OWNER_NUMBER="254794052875"
 
 #═══════[ BOT PROFILE ]═══════✧#
 BOT_NAME="BWM-XMD"
